SEO updates and fixes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,17 +1,80 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- BASIC -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <title>AlgoForce - AI Business Operating System</title>
-    <meta name="description" content="The Operating System for Revenue Intelligence. Enterprise-grade AI Business OS that eliminates revenue leaks and compounds intelligence.">
+
+    <!-- TITLE -->
+    <title>AlgoForce AI — Enterprise Revenue Intelligence Platform</title>
+
+    <!-- PRIMARY SEO -->
+    <meta
+      name="description"
+      content="AlgoForce AI is an enterprise-grade revenue intelligence and AI business operating system that identifies revenue leaks, compounds intelligence, and drives scalable growth."
+    />
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="AlgoForce AI" />
+
+    <!-- CANONICAL (CRITICAL) -->
+    <link rel="canonical" href="https://algoforceaii.com/" />
+
+    <!-- FAVICON -->
+    <link rel="icon" type="image/png" href="/favicon.png" />
+
+    <!-- OPEN GRAPH (SOCIAL + GOOGLE) -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="AlgoForce AI — Enterprise Revenue Intelligence Platform" />
+    <meta
+      property="og:description"
+      content="The AI Business Operating System that eliminates revenue leaks and compounds intelligence for modern enterprises."
+    />
+    <meta property="og:url" content="https://algoforceaii.com/" />
+    <meta property="og:site_name" content="AlgoForce AI" />
+    <meta property="og:image" content="https://algoforceaii.com/og-image.png" />
+
+    <!-- TWITTER -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="AlgoForce AI — Enterprise Revenue Intelligence Platform" />
+    <meta
+      name="twitter:description"
+      content="Enterprise-grade AI Business OS for revenue intelligence, automation, and scalable growth."
+    />
+    <meta name="twitter:image" content="https://algoforceaii.com/og-image.png" />
+
+    <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- STRUCTURED DATA (VERY IMPORTANT) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "AlgoForce AI",
+        "url": "https://algoforceaii.com",
+        "logo": "https://algoforceaii.com/logo.png",
+        "description": "Enterprise-grade AI Business Operating System for revenue intelligence and scalable growth.",
+        "sameAs": [
+          "https://www.linkedin.com/company/algoforce-ai"
+        ]
+      }
+    </script>
   </head>
+
   <body>
+    <noscript>
+      AlgoForce AI requires JavaScript to deliver the full experience.
+    </noscript>
+
     <div id="root"></div>
+
+    <!-- MAIN APP -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
