--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,7 +20,12 @@
     <!-- CANONICAL (CRITICAL) -->
     <link rel="canonical" href="https://algoforceaii.com/" />
 
-
+    <!-- GOOGLE ADSENSE VERIFICATION -->
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9511996003332864"
+      crossorigin="anonymous"
+    ></script>
 
     <!-- OPEN GRAPH (SOCIAL + GOOGLE) -->
     <meta property="og:type" content="website" />
@@ -32,7 +37,6 @@
     <meta property="og:url" content="https://algoforceaii.com/" />
     <meta property="og:site_name" content="AlgoForce AI" />
 
-
     <!-- TWITTER -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="AlgoForce AI — Enterprise Revenue Intelligence Platform" />
@@ -40,7 +44,6 @@
       name="twitter:description"
       content="Enterprise-grade AI Business OS for revenue intelligence, automation, and scalable growth."
     />
-
 
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -57,7 +60,6 @@
         "@type": "Organization",
         "name": "AlgoForce AI",
         "url": "https://algoforceaii.com",
-
         "description": "Enterprise-grade AI Business Operating System for revenue intelligence and scalable growth.",
         "sameAs": [
           "https://www.linkedin.com/company/algoforce-ai"
