Fix favicon paths

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,6 +21,11 @@
     <!-- CANONICAL (CRITICAL) -->
     <link rel="canonical" href="https://algoforceaii.com/" />
 
+    <!-- FAVICON -->
+<link rel="icon" href="/favicon.ico" />
+
+
+
     <!-- GOOGLE ADSENSE VERIFICATION -->
     <script
       async
