--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,8 +22,8 @@
     <link rel="canonical" href="https://algoforceaii.com/" />
 
     <!-- FAVICON -->
-<link rel="icon" href="/favicon.ico" />
-<link rel="icon" href="/favicon.ico?v=2" />
+<link rel="icon" href="/favicon-v2.ico" />
+
 
 
 
