--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,7 +22,7 @@
     <link rel="canonical" href="https://algoforceaii.com/" />
 
     <!-- FAVICON -->
-<link rel="icon" href="/favicon-v2.ico" />
+<link rel="icon" href="/favicon.png" />
 
 
 
