--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,7 +22,12 @@
     <link rel="canonical" href="https://algoforceaii.com/" />
 
     <!-- FAVICON -->
-<link rel="icon" href="/favicon.png" />
+<link rel="icon" type="image/x-icon" href="/favicon-v2.ico?v=2" />
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+
+
 
 
 
