Use transparent PNG favicon with cache busting

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="google-adsense-account" content="ca-pub-9511996003332864">
+    <meta name="google-adsense-account" content="ca-pub-9511996003332864" />
 
     <!-- TITLE -->
     <title>AlgoForce AI — Enterprise Revenue Intelligence Platform</title>
@@ -22,15 +22,9 @@
     <link rel="canonical" href="https://algoforceaii.com/" />
 
     <!-- FAVICON -->
-<link rel="icon" type="image/x-icon" href="/favicon-v2.ico?v=2" />
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <!-- FAVICON -->
+<link rel="icon" type="image/png" href="/favicon.png?v=3" />
 <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-
-
-
-
-
 
 
     <!-- GOOGLE ADSENSE VERIFICATION -->
@@ -42,7 +36,10 @@
 
     <!-- OPEN GRAPH (SOCIAL + GOOGLE) -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="AlgoForce AI — Enterprise Revenue Intelligence Platform" />
+    <meta
+      property="og:title"
+      content="AlgoForce AI — Enterprise Revenue Intelligence Platform"
+    />
     <meta
       property="og:description"
       content="The AI Business Operating System that eliminates revenue leaks and compounds intelligence for modern enterprises."
@@ -52,7 +49,10 @@
 
     <!-- TWITTER -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="AlgoForce AI — Enterprise Revenue Intelligence Platform" />
+    <meta
+      name="twitter:title"
+      content="AlgoForce AI — Enterprise Revenue Intelligence Platform"
+    />
     <meta
       name="twitter:description"
       content="Enterprise-grade AI Business OS for revenue intelligence, automation, and scalable growth."
@@ -74,9 +74,7 @@
         "name": "AlgoForce AI",
         "url": "https://algoforceaii.com",
         "description": "Enterprise-grade AI Business Operating System for revenue intelligence and scalable growth.",
-        "sameAs": [
-          "https://www.linkedin.com/company/algoforce-ai"
-        ]
+        "sameAs": ["https://www.linkedin.com/company/algoforce-ai"]
       }
     </script>
   </head>
