Update project files, add indexing monitoring scripts and reports

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,7 +19,7 @@
     <meta name="author" content="AlgoForce AI" />
 
     <!-- CANONICAL (CRITICAL) -->
-    <link rel="canonical" href="https://algoforceaii.com/" />
+    <link rel="canonical" href="https://www.algoforceaii.com/" />
 
     <!-- FAVICON -->
     <!-- FAVICON -->
@@ -44,7 +44,7 @@
       property="og:description"
       content="The AI Business Operating System that eliminates revenue leaks and compounds intelligence for modern enterprises."
     />
-    <meta property="og:url" content="https://algoforceaii.com/" />
+    <meta property="og:url" content="https://www.algoforceaii.com/" />
     <meta property="og:site_name" content="AlgoForce AI" />
 
     <!-- TWITTER -->
@@ -72,7 +72,7 @@
         "@context": "https://schema.org",
         "@type": "Organization",
         "name": "AlgoForce AI",
-        "url": "https://algoforceaii.com",
+        "url": "https://www.algoforceaii.com",
         "description": "Enterprise-grade AI Business Operating System for revenue intelligence and scalable growth.",
         "sameAs": ["https://www.linkedin.com/company/algoforce-ai"]
       }
